--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ charset-normalizer==3.2.0
 cloudinary==1.34.0
 Django==4.2.5
 django-cloudinary-storage==0.3.0
+django-cors-headers==4.2.0
 idna==3.4
 Pillow==10.0.0
 python-decouple==3.8
